<resources>
    <string name="app_name">Real Estate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="saved_properties">Saved Properties</string>
    <string name="new_user_click_here_to_register">New user? Click here to register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_property">Add Property</string>
    <string name="track_bought_properties">Track bought properties</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="addressType">Address: </string>
    <string name="city">City</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name">Company name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="number_of_restrooms">Number of Restrooms</string>
    <string name="button">Button</string>
    <string name="suburb">Suburb</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="area">Area</string>
    <string name="reference">Reference</string>
    <string name="property_description">Property description</string>
    <string name="amenities">Amenities</string>
    <string name="facts">Facts</string>
    <string name="area_in_square_meters">Area in square meters</string>
    <string name="calculate">Calculate</string>
    <string name="search_properties">Search Properties</string>
    <string name="house_type">House Type:</string>
    <string name="rent_buy">Rent/Buy: </string>
    <string name="interest_and_deposit_charges">Interest and Deposit Charges</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="mortgage_15yrs_10">Mortgage 15yrs(@10%)</string>
    <string name="mortgage_25yrs_10">Mortgage 25yrs(@10%)</string>
    <string name="mortgage_30yrs_10">Mortgage 30yrs(@10%)</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="press_the_like_image_if_interested_in_this_property">Interested in the property? Like it.</string>
    <string name="unlike">Not interested anymore? Press to remove.</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="approve_decline_requests">Approve/Decline Requests</string>
    <string name="houses">Houses</string>
    <string name="list_of_users">List of Users</string>
    <string name="login_times">Login Times</string>
    <string-array name="services">
        <item>Buying or Selling</item>
        <item>Buying</item>
        <item>Selling</item>
    </string-array>
    <string-array name="house_type">
        <item>Cottage</item>
        <item>Full house</item>
        <item>Flat</item>
        <item>Bungalow</item>
        <item>Detached</item>
        <item>End of terrace</item>
        <item>Semi-detached</item>
        <item>Terrace</item>
    </string-array>
    <string-array name="location_type">
        <item>Low density</item>
        <item>Medium density</item>
        <item>High density</item>
    </string-array>
    <string-array name="rent_buy">
        <item>Rent</item>
        <item>Sell</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_time">Login Time</string>
    <string name="user">User</string>
    <string name="delete">Delete</string>
    <string name="logout_time">Logout Time</string>
    <string name="status">Status</string>
    <string name="approve">Approve</string>
</resources>
