<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_add_property"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_property" />
        <item
            android:id="@+id/nav_track_properties"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/track_bought_properties" />
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/search_properties" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/saved_properties" />

    </group>

</menu>
